# matvec

./: README.md
CUDA/: CMakeLists.txt  Makefile  arrayMDgpu.h  matvec.cpp  matvec.h  matvec_cudaKernels.cu
Kokkos/: Makefile  matvec.cpp  matvec.h
OpenMPTarget/: CMakeLists.txt  Makefile  arrayMD.h  matvec.cpp  matvec.h
Serial/: CMakeLists.txt  Makefile  arrayMD.h  matvec.cpp  matvec.h
arrayMD/: arrayMD.h  arrayMDcpu.h
